--- a/src/home/items opened/itemsdetails.css
+++ b/src/home/items opened/itemsdetails.css
@@ -171,7 +171,7 @@
   border: none;
   padding: 8px 12px;
   border-radius: 4px;
-  margin-right: 5px;
+  margin-left: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
