--- a/src/home/items opened/itemsdetails.css
+++ b/src/home/items opened/itemsdetails.css
@@ -17,7 +17,7 @@
   color: #000;
   border: none;
   padding: 10px 20px;
-  width: 100%;
+  width: 310px;
   cursor: pointer;
 }
 
@@ -72,7 +72,7 @@
   color: #000;
   border: none;
   padding: 12px 24px;
-  width: 320px;
+  width: 100%; /* Set width to 100% */
   cursor: pointer;
 }
 
