--- a/src/home/items opened/itemsdetails.css
+++ b/src/home/items opened/itemsdetails.css
@@ -2,6 +2,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+ text-align: center;
   color: white;
 }
 
@@ -17,7 +18,6 @@
   color: #000;
   border: none;
   padding: 10px 20px;
-  width: 310px;
   cursor: pointer;
 }
 
@@ -72,7 +72,7 @@
   color: #000;
   border: none;
   padding: 12px 24px;
-  width: 100%; /* Set width to 100% */
+  width: 310px; /* Set width to 100% */
   cursor: pointer;
 }
 
