--- a/src/home/blog/blog.css
+++ b/src/home/blog/blog.css
@@ -98,7 +98,7 @@
   .main-blog-text p {
     margin-top: 20px;
     font-size: 16px;
-    color: #ffffff;
+    color: #333;
     text-align: center;
     text-decoration: underline;
   }
