--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -23,7 +23,7 @@
   }
   .add-shop-btn-home-header {
     background-color: transparent;
-    color: #333;
+    color: #06d6a0;
     border: 1px solid #333;
     padding: 8px 12px;
     border-radius: 9px;
@@ -219,7 +219,7 @@
   }
   .add-shop-btn-home-header {
     background-color: transparent;
-    color: #333;
+    color: #06d6a0;
     border: 1px solid #333;
     padding: 10px 20px;
     border-radius: 9px;
@@ -342,7 +342,7 @@
     }
     .add-shop-btn-home-header {
       background-color: transparent;
-      color: #333;
+      color: #06d6a0;
       border: 1px solid #333;
       padding: 10px 20px;
       border-radius: 9px;
@@ -466,7 +466,7 @@
     }
     .add-shop-btn-home-header {
       background-color: transparent;
-      color: #333;
+      color: #06d6a0;
       padding: 10px 25px;
       border: 1px solid #333;
       border-radius: 9px;
