--- a/src/home/additemsform/addproductfrom.css
+++ b/src/home/additemsform/addproductfrom.css
@@ -18,7 +18,6 @@
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
-  background-color: #ffffff; /* White background similar to Shopify and Instagram */
   border-radius: 5px;
 }
 
@@ -37,8 +36,7 @@
 .form-container label {
   display: block;
   margin-bottom: 5px;
-  font-weight: bold;
-  color: #333; /* Dark text color similar to Shopify and Instagram */
+  font-weight: 100;
 }
 
 .form-container input[type="text"],
@@ -50,16 +48,6 @@
   border-radius: 3px;
 }
 
-.form-container button[type="submit"] {
-  background-color: #007bff; /* Shopify and Instagram's primary blue color */
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.form-container button[type="submit"]:hover {
-  background-color: #0056b3; /* Darker shade of blue for hover effect */
+.add-product-form-btn button {
+  color: black;
 }
