--- a/src/home/chat/chat.css
+++ b/src/home/chat/chat.css
@@ -124,7 +124,7 @@
   background-color: #000000;
   padding: 15px;
   margin-bottom: 15px;
-  border: 1px solid #e0e0e0; /* Light border color */
+  border: 1px solid #333; /* Light border color */
   border-radius: 5px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s;
@@ -138,6 +138,7 @@
 /* Style for user profile images */
 .user-profiles {
   display: flex;
+  text-align: center;
   align-items: center;
 }
 
@@ -145,7 +146,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin-right: 10px;
+  margin: 0px 5px;
 }
 
 /* Style for user names and "Chat" button */
@@ -153,6 +154,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  text-align: center;
   align-items: flex-start;
   color: white;
 }
@@ -165,16 +167,18 @@
 .chat-button {
   margin-top: 10px;
   padding: 8px 16px;
-  background-color: #ffffff; /* Instagram blue color */
-  color: #000000;
+  background-color: transparent; /* Instagram blue color */
+  color: #333;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
-  margin-left: 20px;
+  border: 1px solid #333;
+  margin-right: 20px;
 }
 
 .chat-button:hover {
-  background-color: #88929c; /* Slightly darker blue on hover */
+  background-color: black; /* Slightly darker blue on hover */
+  color: white;
 }
 
 
