--- a/src/home/mainpage/template1/template1.css
+++ b/src/home/mainpage/template1/template1.css
@@ -78,7 +78,7 @@
   
   .follow-button.following {
     background-color: #000000;
-    color: #00FFE0;
+    color: #7f7f7f;
     border: 1px solid transparent;
   }
   .shop-footer {
@@ -178,7 +178,7 @@
   
   .follow-button.following {
     background-color: #000000;
-    color: #00FFE0;
+    color: #7f7f7f;
     border: 1px solid transparent;
   }
   
@@ -279,7 +279,7 @@
   
   .follow-button.following {
     background-color: #000000;
-    color: #00FFE0;
+    color: #7f7f7f;
     border: 1px solid transparent;
   }
   
@@ -385,7 +385,7 @@
       
       .follow-button.following {
         background-color: #000000;
-        color: #00FFE0;
+        color: #7f7f7f;
         border: 1px solid transparent;
       }
       
