--- a/src/home/user/user.css
+++ b/src/home/user/user.css
@@ -1,6 +1,6 @@
 .user-card {
     background-color: #000000;
-    border: 1px solid #ddd;
+    border: 1px solid #333;
     border-radius: 5px;
     margin-bottom: 20px;
     padding: 15px;
@@ -58,9 +58,9 @@
   
   .profile-link-button {
     padding: 8px 16px;
-    border: none;
-    background-color: #ffffff;
-    color: #000000;
+    border: 1px solid #333;
+    background-color: transparent;
+    color: #333;
     border-radius: 5px;
     text-decoration: none;
     display: inline-block;
