--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -495,3 +495,28 @@ h3 {
  h2 {
   color: white;
 }
+
+.middle-content {
+  text-align: center;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px; /* Add some margin if needed */
+}
+
+.button-container button {
+  margin: 0 10px; /* Adjust the spacing between buttons */
+  padding: 8px 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: #333;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.button-container button.active {
+  background-color: #f0f0f0; /* Change to your active button color */
+  font-weight: bold; /* Optionally make the text bold */
+}
