--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -517,6 +517,8 @@ h3 {
 }
 
 .button-container button.active {
-  background-color: #f0f0f0; /* Change to your active button color */
+  background-color: transparent; /* Change to your active button color */
   font-weight: bold; /* Optionally make the text bold */
+  border: 1px solid #333;
+  color: white;
 }
