--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -47,9 +47,10 @@
   
   .dropmentmainbtns button {
     margin: 5px; /* Add some spacing between buttons */
-    background-color: transparent;
-    border: none;
+    background-color: #333;
+    border: 1px solid #333;
     cursor: pointer;
+    padding: 8px 12px;
     font-size: medium;
     color: rgb(253, 253, 253);
   }
@@ -166,9 +167,10 @@
     
     .dropmentmainbtns button {
       margin-left: 10px;
-      background-color: transparent;
-      border: none;
+      background-color: #333;
+      border: 1px solid #333;
       cursor: pointer;
+      padding: 10px 20px;
       font-size: medium;
       color: rgb(255, 255, 255);
     }
@@ -265,9 +267,11 @@
     /* Buttons styles */
     .dropmentmainbtns button {
       margin: 0 8px; /* Adjust margin as needed */
-      background-color: transparent;
-      border: none;
+      background-color: #333;
+      border: #333;
       cursor: pointer;
+      border-radius: 9px;
+      padding: 10px 20px;
       font-size: medium;
       color: rgb(255, 255, 255);
     }
@@ -389,9 +393,11 @@
     /* Buttons styles */
     .dropmentmainbtns button {
       margin: 0 8px; /* Adjust margin as needed */
-      background-color: transparent;
-      border: none;
+      background-color: #333;
+      border: 1px solid #333;
       cursor: pointer;
+      padding: 8px;
+      border-radius: 9px;
       font-size: medium;
       color: rgb(255, 255, 255);
     }
