--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -51,7 +51,7 @@
     border: 1px solid #333;
     cursor: pointer;
     padding: 8px 12px;
-    font-size: medium;
+    border-radius: 9px;
     color: rgb(253, 253, 253);
   }
   
