--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -172,6 +172,7 @@
       cursor: pointer;
       padding: 10px 20px;
       font-size: medium;
+      border-radius: 9px;
       color: rgb(255, 255, 255);
     }
     
