--- a/src/home/custom-shop/headers-parts/headers.css
+++ b/src/home/custom-shop/headers-parts/headers.css
@@ -245,7 +245,7 @@
   margin-top: 50px;
 }
 .hero-section2-header5-preview h1 {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 200;
   color: white;
 }
@@ -278,10 +278,8 @@
   background-position: center;
   height: 200px;
   width: cover;
+  text-align: center;
   border-radius: 9px;
-}
-.header5 {
-  display: inline-flex;
 }
 .hero-section2-header5 {
   width: cover;
@@ -289,7 +287,7 @@
   margin-top: 50px;
 }
 .hero-section2-header5 h1 {
-  font-size: 80px;
+  font-size: 30px;
   font-weight: 200;
   color: white;
 }
@@ -301,18 +299,10 @@
   color: #fff;
   border-radius: 15px;
   border: 2px solid white;
-  padding: 15px 20px;
+  padding: 8px 15px;
   margin-left: 30px;
   margin-right: 30px;
-  font-size: medium;
   margin-top: 10px;
-}
-.hero-section2-header5 button:hover {
-  border: 2px solid white;
-  color: white;
-  transition: 0.3s;
-  border-radius: 25px;
-  background-color: transparent;
 }
 
 }
