--- a/src/home/custom-shop/csb.css
+++ b/src/home/custom-shop/csb.css
@@ -1,58 +1,3 @@
-.box-container {
-    border: 2px solid #ccc;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 400px; /* Adjust the width as needed */
-    margin: 0 auto;
-    text-align: center; /* Center the content horizontally */
-  }
-  
-  .header-section {
-    margin-bottom: 20px;
-  }
-  .header-section button {
-    background-color: black;
-    color: white;
-    border: 1px solid #333;
-    padding: 12px 17px;
-    border-radius: 9px;
-  }
-  .back-button {
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
-  }
-  
-  .section-heading {
-    font-size: 24px;
-    color: #ffffff;
-    margin-bottom: 20px;
-  }
-  
-  .section-buttons {
-    text-align: center; /* Center the buttons horizontally */
-  }
-  
-  .section-button {
-    background-color: #833ab4;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    margin: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-    margin-left: 150px;
-    display: block; /* Display buttons as blocks (one below the other) */
-  }
-  
-  .section-button:hover {
-    background-color: #833ab4
-  }
   .step1buildheader h1 {
     text-align: center;
     font-weight: 300;
@@ -97,3 +42,53 @@
     font-family: 'San Francisco', sans-serif;
   }
 
+  .dark-box-container {
+    color: #ffffff;
+    text-align: center;
+    /* Additional styling */
+  }
+  
+  .dark-header-section {
+    padding: 20px;
+    /* Additional styling */
+  }
+  
+  .dark-section-heading {
+    margin-bottom: 20px;
+    font-weight: 100;
+    /* Additional styling */
+  }
+  
+  .dark-go-back-button {
+    background-color: transparent;
+    color: white;
+    border: 1px solid #333;
+    border-radius: 9px;
+    padding: 12px;
+    cursor: pointer;
+    /* Additional styling */
+  }
+  
+  .dark-section-buttons {
+    display: flex;
+    flex-direction: column; /* Stack buttons vertically */
+    align-items: center; /* Align buttons horizontally in the center */
+    /* Additional styling */
+  }
+  
+  .dark-section-button {
+    background-color: #6E49F6;
+    color: white;
+    width: 180px;
+    padding: 10px;
+    border: 1px solid #6E49F6;
+    border-radius: 9px;
+    cursor: pointer;
+    margin-bottom: 30px; 
+ }
+ .dark-section-button:hover {
+  background-color: transparent;
+  color: white;
+  transition: 0.3s;
+  border: 1px solid #6E49F6;
+ }
